# web/checks_api.go
@@ -6,12 +6,26 @@ import (
 	"github.com/gin-gonic/gin"
 
 	"github.com/trento-project/trento/internal/consul"
+
+	"github.com/trento-project/trento/web/models"
 	"github.com/trento-project/trento/web/services"
 )
 
 type JSONChecksSettings struct {
 	SelectedChecks     []string          `json:"selected_checks" binding:"required"`
 	ConnectionSettings map[string]string `json:"connection_settings" binding:"required"`
+}
+
+type JSONChecksCatalog []*JSONCheck
+
+type JSONCheck struct {
+	ID             string `json:"id,omitempty" binding:"required"`
+	Name           string `json:"name,omitempty" binding:"required"`
+	Group          string `json:"group,omitempty" binding:"required"`
+	Description    string `json:"description,omitempty"`
+	Remediation    string `json:"remediation,omitempty"`
+	Implementation string `json:"implementation,omitempty"`
+	Labels         string `json:"labels,omitempty"`
 }
 
 // ApiCheckResultsHandler godoc
@@ -32,6 +46,49 @@ func ApiClusterCheckResultsHandler(client consul.Client, s services.ChecksServic
 		}
 
 		c.JSON(http.StatusOK, checkResults)
+	}
+}
+
+// ApiCreateChecksCatalogtaHandler godoc
+// @Summary Create a checks catalog metadata
+// @Produce json
+// @Param Body body JSONChecksCatalog true "Checks metadata"
+// @Success 201 {object} JSONChecksCatalog
+// @Error 500
+// @Router /api/checks/catalog [post]
+func ApiCreateChecksCatalogtaHandler(s services.ChecksService) gin.HandlerFunc {
+	return func(c *gin.Context) {
+
+		var r JSONChecksCatalog
+
+		err := c.BindJSON(&r)
+		if err != nil {
+			_ = c.Error(BadRequestError("unable to parse JSON body"))
+			return
+		}
+
+		var catalog models.ChecksCatalog
+
+		for _, checkData := range r {
+			newCheck := &models.Check{
+				ID:             checkData.ID,
+				Name:           checkData.Name,
+				Group:          checkData.Group,
+				Description:    checkData.Description,
+				Remediation:    checkData.Remediation,
+				Implementation: checkData.Implementation,
+				Labels:         checkData.Labels,
+			}
+			catalog = append(catalog, newCheck)
+		}
+
+		err = s.CreateChecksCatalog(catalog)
+		if err != nil {
+			c.Error(err)
+			return
+		}
+
+		c.JSON(http.StatusOK, &r)
 	}
 }
 
